# reskin

./: .gitignore  JOURNAL.md  LICENSE  README.md  bundler.html  index.html  package-lock.json  package.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: nightly.yml
public/: index.css
public/assets/bundler/: index.css
src/: App.css  App.jsx  AuthModal.jsx  ConfigurationFiles.css  ConfigurationFiles.jsx  Marketplace.jsx  SetNewPassword.jsx  Settings.css  Settings.jsx  SideNav.css  SideNav.jsx  ThemeBundler.css  ThemeBundler.jsx  ThemeCard.css  ThemeCard.jsx  ThemeDetails.jsx  ThemeInstaller.css  ThemeInstaller.jsx  ThemeRow.css  ThemeRow.jsx  Titlebar.css  Titlebar.jsx  UploadTheme.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: apply.rs  bundle.rs  check.rs  commands.rs  extract.rs  file.rs  info.rs  install.rs  main.rs  marketplace.rs  recent.rs  types.rs  utils.rs  window.rs
src/locales/: en.json  index.js  sk.json  tr.json
