[package]
name = "reskin"
version = "1.1.0"
description = "Linux customization done right."
authors = [
	"iamnotmega",
]
edition = "2021"

[[bin]]
name = "reskin"
path = "src/main.rs"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
opt-level=3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
